# AutoDocumentVerification

./: .env.example  .gitignore  ALL_ISSUES_RESOLVED.md  ALL_TESTS_PASSING_REPORT.md  ANALYSIS_RESULTS_DISPLAY_FIX.md  ANALYSIS_START_ERROR_FIXED.md  ANALYSIS_START_FIX_COMPLETE.md  AUTHENTICATION_FIX.md  AUTHENTICATION_ISSUE_RESOLVED.md  BATCH_PROCESSING_IMPLEMENTATION.md  BATCH_UPLOAD_FIX.md  BUTTON_CLICK_ERROR_FIXED.md  CHANGELOG.md  DATABASE_INTEGRATION_COMPLETE.md  DATABASE_INTEGRATION_GUIDE.md  DATETIME_SERIALIZATION_FIX_FINAL.md  DEPLOYMENT_COMPLETE_v0.2.0.md  DEPLOYMENT_COMPLETE_v0.3.0.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_VERIFICATION.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  DEVLOG.md  DOCKER_DEPLOYMENT_SUCCESS.md  DOCUMENT_STATUS_ERROR_FIXED.md  FINAL_DATABASE_INTEGRATION_SUMMARY.md  FINAL_DEPLOYMENT_VERIFICATION.md  FINAL_FIX_VERIFICATION.md  FINAL_TEST_REPORT.md  FORGERY_DETECTION_CHECKLIST.md  FORGERY_DETECTION_COMPLETE.md  FORGERY_DETECTION_ENHANCEMENT.md  FORGERY_DETECTION_IMPLEMENTATION_SUMMARY.md  FORGERY_DETECTION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  MICROSERVICES_DEPLOYMENT_COMPLETE.md  MICROSERVICES_TEST_REPORT.md  QUICK_START_DATABASE.md  QUICK_START_FORGERY_DETECTION.md  QUICK_TEST_GUIDE.md  (+46 more)
.github/workflows/: ci-cd.yml
.kiro/hooks/: documentation-update.json  security-check.json  test-validation.json
.kiro/prompts/: batch-processing.md  expert-testimony.md  forensic-analysis.md  security-audit.md
.kiro/specs/document-forensics/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
demo_data/: api_examples.json
demo_data/batch_samples/: batch_manifest.json  certificate_04.txt  certificate_05.txt  contract_02.txt  contract_03.txt
demo_data/original_documents/: authenticity_certificate_original.txt  legal_contract_original.txt
demo_data/tampered_documents/: authenticity_certificate_tampered.txt  legal_contract_tampered.txt
demo_documents/: original_contract.txt  tampered_contract.txt
k8s/: monitoring.yaml
releases/: document-forensics-v0.1.0-SUMMARY.txt  document-forensics-v0.1.0.sha256  document-forensics-v0.3.0-SUMMARY.txt  document-forensics-v0.3.0.sha256
releases/document-forensics-v0.1.0/: DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.simple.yml  install.ps1  install.sh  pyproject.toml  requirements.txt
releases/document-forensics-v0.1.0/k8s/: configmap.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  web.yaml
releases/document-forensics-v0.3.0/: LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  TEST_SUCCESS_SUMMARY.md  install.ps1  install.sh  requirements.txt
scripts/: create-release-v0.3.0.ps1  health-check.py  k8s-deploy.sh
src/document_forensics/cli/: main.py  (+3 more)
tests/: __init__.py  conftest.py  test_forgery_detector.py  test_project_setup.py  test_security_audit.py  test_workflow_manager.py
(+97 files in other folders)
