[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-forensics"
version = "0.2.0"
description = "AI-Powered Document Forensics & Verification System"
authors = [{name = "Document Forensics Team", email = "team@docforensics.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "python-magic>=0.4.27",
    "Pillow>=10.1.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "exifread>=3.0.0",
    "opencv-python>=4.8.1.78",
    "scikit-image>=0.22.0",
    "spacy>=3.7.2",
    "nltk>=3.8.1",
    "numpy>=1.25.2",
    "pandas>=2.1.4",
    "cryptography>=41.0.8",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "matplotlib>=3.8.2",
    "reportlab>=4.0.7",
    "jinja2>=3.1.2",
    "streamlit>=1.28.2",
    "click>=8.1.7",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "hypothesis>=6.92.1",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[project.scripts]
forensics = "document_forensics.cli.run:main"
forensics-web = "document_forensics.web.run:main"

[project.urls]
Homepage = "https://github.com/docforensics/document-forensics"
Repository = "https://github.com/docforensics/document-forensics.git"
Issues = "https://github.com/docforensics/document-forensics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"